2003-09-25  Andras Varga

	* modinsp2.tcl: added support for "r" submodule display string tag.
	It draws a circle (or a disc) around the submodule with the given 
	radius, and it can be used to visualize transmission range of 
	wireless nodes. Syntax: "r=<radius>,<fillcolor>,<color>,<width>",
	the default is unfilled black circle with radius=100.

2003-09-22  Andras Varga
	* tkapp.cc, modinsp.cc, modinsp2.tcl: implemented animation of
	sendDirect().

2003-09-01  Andras Varga

	* tkapp.cc: default values for update-freq-fast and update-freq-express
	changed to 50 and 10000

2003-07-24  Andras Varga

	* implemented Inspect|Find/Inspect objects dialog, a filtered-ordered 
	dialog of all objects.

2003-07-22  Andras Varga

	* structinsp.cc/h: "Fields" tab in message inspector now recursively 
	displays embedded structs (so far it only displayed "{...}")

2003-06-16  ------ omnetpp-2.3 released ------

2003-05-26  Andras Varga

	* cOutVector inspector: added "autoscale" checkbox to Options dialog

2003-04-17  Andras Varga

	* objinsp.tcl: fixed bug which prevented cPackets (or objects 
	subclassed from it) from being inspected (Tcl error)

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-03-13  Andras Varga

	* modinsp2.tcl: fixed occasional "conn_id: no such variable" error

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-05  Andras Varga

	* modinsp2.tcl: bugfix

2003-01-29  Andras Varga

	* added "Finish" to main toolbar

	* known bug: if one sets up the Token Ring sample with 120 nodes
	(other numbers work as well), displayed ring will be broken at places.

2003-01-23  Andras Varga

	* "Step" button in module inspectors replaced with 3 buttons ("Run 
	until next local event", "Fast run until next local event", "Stop")

	* Graphical module inspector: if there're too many submodules, drawing
	may take very long, so the user is prompted if he/she really wants
	see the graphics. Limit is currently 1000 submodules. 